@@ -69,7 +69,7 @@ support in Gnuastro. The list is ordered alphabetically (by first name).
     Helena Domínguez Sánchez             hdominguez@cefca.es
     Hok Kan (Ronald) Tsang               hkt1992@connect.hku.hk
     Hilderic Browne                      hilderic@storm.ca
-    Ignacio Ruiz Cejudo                  igruiz04@ucm.es
+    Ignacio Ruiz Cejudo                  alu0101597638@ull.edu.es
     Ignacio Trujillo                     trujillo@iac.es
     Irene Pintos Castro                  ipintos@cefca.es
     Javier Licandro                      jlicandr@iac.es
